@@ -1,0 +1,54 @@
+[general]
+description = classical damage
+calculation_mode = classical_damage
+
+[exposure]
+exposure_file = exposure_model.xml
+
+[boundaries]
+region_constraint = -122.6 38.3, -121.5 38.3, -121.5 37.9, -122.6 37.9
+
+[site_params]
+reference_vs30_type = measured
+reference_vs30_value = 760.0
+reference_depth_to_2pt5km_per_sec = 5.0
+reference_depth_to_1pt0km_per_sec = 100.0
+
+[erf]
+width_of_mfd_bin = 0.1
+rupture_mesh_spacing = 2.0
+area_source_discretization = 10
+
+[logic_trees]
+source_model_logic_tree_file = source_model_logic_tree.xml
+gsim_logic_tree_file = gsim_logic_tree.xml
+
+[hazard_calculation]
+random_seed = 24
+truncation_level = 3
+maximum_distance = 200.0
+investigation_time = 1
+number_of_logic_tree_samples = 0
+
+[hazard_outputs]
+mean_hazard_curves = true
+quantile_hazard_curves = 0.15, 0.50, 0.85
+hazard_maps = true
+poes = 0.0004, 0.0020
+uniform_hazard_spectra = true
+
+[fragility]
+structural_fragility_file = structural_fragility_model.xml
+nonstructural_fragility_file = nonstructural_fragility_model.xml
+contents_fragility_file = contents_fragility_model.xml
+
+[risk_calculation]
+risk_investigation_time = 1
+lrem_steps_per_interval = 1
+
+[risk_outputs]
+quantile_loss_curves = 0.15, 0.50, 0.85
+conditional_loss_poes = 0.0004, 0.0020
+
+[export]
+export_dir = ./
